# ms_custom_ops

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CODEOWNERS  README.md  README_EN.md  requirements.txt  setup.py
ops/: CMakeLists.txt
ops/ascendc/: CMakeLists.txt
ops/ascendc/aclnn_src/: CMakeLists.txt  build.sh
ops/ascendc/apply_rotary_pos_emb_ms/: apply_rotary_pos_emb_ms.cc  apply_rotary_pos_emb_ms.md  apply_rotary_pos_emb_ms_op.yaml
ops/ascendc/apply_rotary_pos_emb_v3/: apply_rotary_pos_emb_v3.cc  apply_rotary_pos_emb_v3.md  apply_rotary_pos_emb_v3_op.yaml
ops/ascendc/reshape_and_cache_npd/: reshape_and_cache_npd.cc  reshape_and_cache_npd.md  reshape_and_cache_npd_op.yaml
ops/ascendc/unpad_fa_npd/: unpad_fa_npd.cc  unpad_fa_npd.md  unpad_fa_npd_op.yaml
ops/c_api/: CMakeLists.txt
ops/c_api/apply_rotary_pos_emb/: apply_rotary_pos_emb.cc  apply_rotary_pos_emb.md
ops/c_api/apply_rotary_pos_emb_atb/: apply_rotary_pos_emb_atb.cc  apply_rotary_pos_emb_atb.md  apply_rotary_pos_emb_atb.yaml
ops/c_api/apply_rotary_pos_emb_cops/: apply_rotary_pos_emb_cops.cc  apply_rotary_pos_emb_cops.md  apply_rotary_pos_emb_cops_op.yaml
ops/c_api/apply_rotary_pos_emb_ext/: apply_rotary_pos_emb_ext.cc  apply_rotary_pos_emb_ext.md  apply_rotary_pos_emb_ext_op.yaml
ops/c_api/batch_matmul/: batch_matmul.cc  batch_matmul.md  batch_matmul_op.yaml
ops/c_api/fa_update/: fa_update_common.h  fa_update_doc.md  fa_update_graph.cc  fa_update_op.yaml  fa_update_pynative.cc
ops/framework/: CMakeLists.txt  load_op_api_library.cc  module.cc  utils.cc  utils.h
(+329 files in other folders)
